依存関係にpython-pptxとipykernelを追加し、uv.lockファイルを更新。新たにappnope、asttokens、cffi、comm、debugpy、executing、ipython、ipython-pygments-lexers、jedi、jupyter-client、jupyter-core、lxml、matplotlib-inline、stack-data、tornado、traitlets、wcwidth、xlsxwriterなどのパッケージを追加。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,6 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "google-genai>=0.8.0",
     "pyyaml>=6.0",
+    "python-pptx>=1.0.2",
+    "ipykernel>=6.29.5",
 ]
